first start to mock trello app

--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "typescript",
     "course"
   ],
-  "author": "Maximilian Schwarzmüller",
+  "author": "Rob Bridgest",
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.5.4"
+  },
+  "dependencies": {
+    "typescript": "^4.2.4"
   }
 }
